[package]
name = "cow-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "0.12.6"
env_logger = "0.11.7"
eyre = "0.6.12"
hex = "0.4.3"
log = "0.4.27"
reqwest = "0.12.15"
reqwest-middleware = "0.4.1"
reqwest-retry = "0.7.0"
secp256k1 = "0.30.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
serde_with = "3.12.0"
tokio = "1.44.1"
url = "2.5.4"
